Netty-migration M1: edge-read HTTP → Netty (ADR-0043 supersedes 0037)
Operator platform decision: standardize all transport on Netty 4.2. Honest
rationale (ADR-0043): io_uring + platform uniformity + the MEASURED edge-read
8.7x allocation win; measured-NEUTRAL on the wire codecs (the head-to-head
proved Netty ties JDK at ~0 there). NOT "Netty is faster everywhere". Staged by
verification, lowest-risk first; this lands the foundation + M1 (edge-read).

Foundation
- ADR-0043 supersedes ADR-0037 wholesale; ADR-0037 marked Superseded.
- docs/netty-migration/netty42-api.md: 4.2 API + the io_uring->Epoll->NIO
  runtime-detected 3-tier selector (the gap the head-to-head's 2-tier left).
- decision-log DR-M0..N4 (steer change; edge-is-plaintext reconciliation so
  "edge mTLS" is the fan-out surface/M3 not M1; equivalence-by-construction;
  routing exact-match tightening).
- Netty 4.2.15 production deps for configd-edge-node (+ io_uring artifacts).

M1 edge-read
- EdgeReadHandler: transport-agnostic decision logic = the single source of
  truth. The JDK EdgeHttpServer (refactored to a thin adapter) and the new
  NettyEdgeHttpServer both delegate to it -> byte-identical on canonical paths
  by construction (proved: the unchanged EdgeHttpServerTest stays green on the
  refactored JDK adapter, then NettyEdgeHttpServerTest runs the identical matrix).
- NettyTransport: 3-tier io_uring->Epoll->NIO selector (coherent factory+channel
  triple; fail-loud on a forced-unavailable tier, no silent downgrade).
- NettyEdgeHttpServer: idiomatic Netty read server + DoS hardening (bounded
  framing, request-size ceiling, slowloris completion-deadline incl. the dribble
  variant, idle reaping, leak-free ByteBuf lifecycle). Allocation-free hot path
  (the handler IS the sink; timestamp-watcher deadline -- no per-request schedule).
- EdgeNodeMain swapped to the Netty server: production edge-read now on Netty.

Verification (all GREEN)
- Every edge S7/read-governance control re-proven on Netty by 