@@ -1,79 +1,70 @@
-# Netty-migration — handoff (Phase R complete; paused at the baseline)
+# Netty-migration — handoff
 
-**Status:** Phase R (research + inventory + allocation baseline) is **complete and audited**.
-Work **paused at the baseline by operator decision** — **no transport or codec code was
-changed** this session. The only code added is **test-only, additive** JMH benchmarks under
-`configd-testkit`. `main` is untouched; this is a clean, green seam.
+> **This doc is the living continuity record (latest session at top).** Prior evidence artifacts
+> (`baseline.md`, `inventory.md`, `decision-log.md` DR-1..5, the `docs/jdk-vs-netty/` head-to-head)
+> are immutable; this summarizes the current state and what remains.
 
-## What this session established
+---
 
-The charter's premise ("migrate JDK/Spring transport → Netty for zero-alloc") was corrected
-against reality and then **measured**:
+## Session 2 — the platform decision + M1 (edge-read) migration
 
-1. **No Spring, no Netty, no NIO selectors exist.** All four surfaces are JDK blocking-socket
-   + virtual threads. [ADR-0010](../decisions/adr-0010-netty-grpc-transport.md) (Netty+gRPC+
-   Spring) is Superseded fiction; [ADR-0037](../decisions/adr-0037-edge-transport-jdk-stack.md)
-   ratified the JDK stack and prices Netty behind a `>1k-subs/node` precondition not met. The
-   S7 controls are already framework-decoupled plain-Java services (low migration risk). See
-   [inventory.md](inventory.md).
-2. **The transport-shell allocation was measured for the first time** (the charter's required-
-   but-missing metric), JMH `-prof gc`, all four surfaces, **second-agent-audited** (two
-   headline numbers were understated and corrected). See [baseline.md](baseline.md),
-   [decision-log.md](decision-log.md) DR-1..5, raw captures in `baseline/`.
+**Steer change (DR-M0):** the prior session's measure-first recommendation was *surgical* (Netty for
+edge-read only). The operator decided to **standardize ALL transport on Netty** —
+[ADR-0043](../decisions/adr-0043-netty-transport-platform.md) supersedes ADR-0037 **wholesale**, on
+the honest rationale **io_uring + platform uniformity + the measured edge-read 8.7× win**, explicitly
+**accepting measured-neutral performance on the consensus/fan-out wire codecs** (the head-to-head
+proved Netty ties JDK at ~0 there). NOT a "Netty is faster everywhere" claim.
 
-## The verdict (measurement reshaped "migrate everything")
+### Done this session (foundation + M1 edge-read), all GREEN
 
-| # | Surface | Allocation | **Verdict** |
-|---|---------|-----------|-------------|
-| 1 | admin API (`HttpApiServer`) | ~38 KB/req e2e | **Acquit — stay on JDK** (control-plane QPS → immaterial) |
-| 2 | edge read HTTP (`EdgeHttpServer`) | ~38 KB/req e2e (client+server) | **Convict for Netty — PROVISIONAL** (the one genuine case) |
-| 3 | fan-out NOTIFY (`EdgeFrameCodec`) | **1.2 → 71 KB/op** signed | **Convict — codec rewrite first (no Netty)** |
-| 4 | consensus wire (`FrameCodec`/`TcpRaftTransport`) | 88 → 8 280 B/op send; floor **≈0** | **Acquit for Netty — in-place fix** |
+| Item | What | Evidence |
+|---|---|---|
+| Phase R | `netty42-api.md`: 4.2 API + the **3-tier io_uring→Epoll→NIO runtime-detected selector** (the gap the head-to-head's 2-tier left) | [netty42-api.md](netty42-api.md) |
+| ADR | ADR-0043 supersedes ADR-0037 wholesale, honest rationale; ADR-0037 marked Superseded | [adr-0043](../decisions/adr-0043-netty-transport-platform.md) |
+| Decisions | DR-M0 (steer), DR-N1 (edge is **plaintext** — "edge mTLS" is the fan-out surface/M3, not M1), DR-N2 (extract transport-agnostic logic; equivalence by construction), DR-N3 (session scope) | [decision-log.md](decision-log.md) |
+| M1.1 | Netty production deps in `configd-edge-node` (+ io_uring artifacts in root dependencyManagement) | poms |
+| M1.2 | `NettyTransport` 3-tier selector (coherent factory+channel triple; fail-loud on forced-unavailable) | `NettyTransport.java`, `NettyTransportTest` (8 tests) |
+| M1.3 | `EdgeReadHandler` (shared decision logic) + JDK `EdgeHttpServer` refactored to delegate + `NettyEdgeHttpServer` (Netty adapter, hardening) | the 3 classes |
+| M1.4 | **ALL edge controls re-proven on Netty** by the identical contract matrix: `NettyEdgeHttpServerTest` **15/15** (= JDK `EdgeHttpServerTest` 15/15); hardening **5/5** (oversize header/body, slowloris incl. dribble, leak-free, legit keep-alive served) | `AbstractEdgeReadServerContract` + subclasses; full edge-node suite **87 tests, 0F/0E, 1 skipped** |
+| M1.5 | **gc-proof: 8.7× HOLDS on production — 14,999 → 1,703.8 B/req = 8.80×** (tier io_uring). Red→green: naive deadline-rearm+sink regressed to 1,820 (8.24×); allocation-free redesign (handler-IS-sink + timestamp-watcher deadline) restored 1,704 | [m1-edge-read-gc-proof.md](m1-edge-read-gc-proof.md) |
+| M1.6 | CI-fallback proof: `NettyEdgeHttpServerNioFallbackTest` runs the **full contract on forced NIO (15/15)**; all Netty tests are CI-gated via ci.yml's `mvn clean install`; CI runners (no io_uring) exercise the fallback + the fail-loud path naturally | the test + ci.yml |
 
-**Netty earns ~one surface (provisionally); two hot surfaces have cheaper no-Netty fixes; one
-is acquitted.**
+### Key design facts (carry forward)
+- **The edge-read surface is PLAINTEXT** (client-facing read API). `EdgeNodeMain` gives `TlsManager`
+  to the fan-out `EdgeStreamClient`, not to the HTTP server. So M1 preserved/re-proved the controls
+  it actually has (strong-read fail-close, not-subscribed/cursor-behind refusal, staleness-on-all-
+  reads, `/metrics` Bearer gate, method 405, the INV-M1 seam) + added DoS hardening. **mTLS belongs
+  to M3 (fan-out).** (DR-N1.)
+- **Equivalence by construction:** both transports delegate to `EdgeReadHandler`; the JDK adapter
+  staying green on the *unchanged* `EdgeHttpServerTest` proves the extraction is faithful, then the
+  Netty adapter runs the identical matrix. (DR-N2.)
+- **io_uring was selected on this box** (kernel 7.0) yet allocation is unchanged — io_uring's win is
+  **syscalls, not bytes** (Phase V's axis, EC2-gated, not yet run).
+- **Allocation discipline is load-bearing:** naive Netty hardening regressed the floor; idiomatic
+  (no per-request `schedule()`/sink object) restored it. Same lesson as the head-to-head.
 
-## Recommended next steps (when work resumes)
+### Remaining for M1 (immediate next steps)
+- **Second-agent replay** (charter gate) — IN PROGRESS at handoff; the swap is gated on its APPROVE.
+- **M1.7 swap:** point `EdgeNodeMain` at `NettyEdgeHttpServer` (field type + construction +
+  `start()` throws InterruptedException + `stop()` no-arg). Then run the full edge-node + integration
+  suite (EdgeNodeIntegrationTest, EdgeFailoverTest, EdgeBootstrapUnderSustainedWritesProcessTest,
+  GameDayDrillTest, …) which then exercises the Netty server in-process. **Until that flip, production
+  is on the JDK server (a clean, not-half-migrated seam).**
+- **Push the branch → CI green** (RR-097 rule: no close with unpushed branches / unverified CI
+  claims). `main` moves only at the CI-green merge gate (a separate explicit step; not this session).
 
-Priority order (the cheap, certain wins first; the Netty bet last, behind evidence):
+### Remaining for the migration (later sessions)
+- **M2 admin API** (re-prove ALL of S7: authn/authz/audit/replay/429/strong-read on Netty).
+- **M3 fan-out** (Netty transport + the single-pass `EdgeFrameCodec` rewrite + mTLS + slow-consumer
+  policy re-proven; the "edge mTLS" of DR-N1 lives here).
+- **M4 consensus wire** (most dangerous — M3 coalesced-heartbeat timing; full S2–S4 + no-spurious-
+  election sweep on Netty; four-way rigor; ~0 B/op idiomatic encode).
+- **Phase V — io_uring validation** (EC2-gated; MEASURE the syscall-reduction benefit; honest
+  delivered-now / latent-at-scale verdict).
 
-1. **Consensus (4) — no-Netty in-place fix.** `TcpRaftTransport.encodeWire` uses the allocating
-   `FrameCodec.encode`; the codec's existing `encode(ByteBuffer)` variant measures ~0 B/op.
-   Encode the frame **and** the 4-byte sender id into one reused per-connection buffer; add a
-   decode-into for receive. Re-prove: golden-fixture wire bytes unchanged, **M3
-   no-spurious-election**, S2–S4. Expected: send 88→~0 B/op.
-2. **Fan-out (3) — no-Netty codec rewrite.** Rewrite `EdgeFrameCodec.encode`/`decode` to a
-   single-pass into-buffer form (the `FrameCodec` into-variant pattern), killing the
-   intermediate `List<byte[]>`/`ByteBuffer`/clone churn. **Re-prove `EdgeFrameCodecGoldenFixtureTest`
-   bytes byte-identical** + the signed-delta round-trip (`EdgeFrameCodecPropertyTest`). Expected:
-   71 KB → ~frame size per batch.
-3. **Edge read (2) — resolve the provisional Netty conviction BEFORE building.** Get the two
-   open numbers: (a) the **server-side** allocation split (async-profiler `alloc`, or run the
-   client out-of-JVM so `-prof gc` sees only the server), and (b) the **production edge read
-   QPS** (confirm "hot"). Only if both hold, build the hand-rolled zero-alloc Netty HTTP/1.1
-   read pipeline; a **new ADR supersedes ADR-0037 for this surface only**, citing allocation.
-4. **Admin (1) — no change.** Documented acquittal.
-
-Anything migrated to Netty must re-prove its S7 negative tests on the new pipeline (charter §4)
-and supersede ADR-0037 via a new ADR for that surface only.
-
-## How to reproduce the baseline
-
-```
-./mvnw -B -pl configd-testkit -am package -Dmaven.test.skip=true   # builds benchmarks.jar
-java --enable-preview -jar configd-testkit/target/benchmarks.jar \
-    'TransportFrameAllocBenchmark|EdgeWireAllocBenchmark|AdminHttpAllocBenchmark|EdgeHttpAllocBenchmark' \
-    -prof gc -f 2 -wi 3 -i 4 -w 1 -r 1
-```
-Benchmarks: `configd-testkit/src/main/java/io/configd/bench/{TransportFrameAlloc,EdgeWireAlloc,AdminHttpAlloc}Benchmark.java`
-and `.../io/configd/edge/node/EdgeHttpAllocBenchmark.java` (in the `edge.node` package to reach
-package-private `EdgeNodeMetrics`). 2-vCPU box: run JMH one job at a time; B/op is
-CPU-count-independent so the numbers are trustworthy (latency is not measured/claimed).
-
-## Residual caveats (carry forward)
-- HTTP numbers are **end-to-end (client+server)** — an upper bound on server allocation. The
-  edge-read conviction is **not proven** until the server-side split + QPS are measured.
-- Fan-out 71 KB/op is itself a **floor**: `FanOutSessionCore` batch assembly + the `SSLSocket`
-  write add more (same direction), not included in the codec benchmark.
-- Consensus M3 heartbeat path is touched by fix (1) — its timing (no-spurious-election) must be
-  re-verified, not assumed.
+## How to reproduce
+- Edge-read functional + hardening + selector + fallback:
+  `./mvnw -o -pl configd-edge-node test -Dtest='EdgeHttpServerTest,NettyEdgeHttpServerTest,NettyEdgeHttpServerNioFallbackTest,NettyEdgeHttpServerHardeningTest,NettyTransportTest' -Dsurefire.failIfNoSpecifiedTests=false`
+- gc-proof: build `benchmarks.jar` (`./mvnw -pl configd-testkit -am package -DskipTests`), then run
+  `EdgeReadAllocServerMain {jdk|netty-prod} ...` + `EdgeReadLoadClientMain ...` (commands in
+  [m1-edge-read-gc-proof.md](m1-edge-read-gc-proof.md)).
